# Sudoku

./: .gitignore  CMakeLists.txt  README.md  Sudoku.layout  sudoku.sqlite3
header/: sudoku.h
src/: database.c  databaseUI.c  encrypt.c  gameUI.c  main.c  mainMenue.c  rulesUI.c  sudoku.c  system.c
